@@ -2,6 +2,7 @@
 #### Added
 - Display "Show more events" button below the events list
 - Document basic installation
+- Add settings link to plugin on plugins page
 #### Changed
 #### Deprecated
 #### Removed
